log
Fri 05 May 2023 12:41:18 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:89:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   89 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
8784607
Fri 05 May 2023 12:47:02 PM UTC: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
557fbb9
Fri 05 May 2023 12:48:44 PM UTC: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
22c5075
Fri 05 May 2023 12:49:23 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:7: error: ‘nodoNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   69 |       pushBack(list, nodoNuevo);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9afe4ee
Fri 05 May 2023 12:50:34 PM UTC: 
 sudoku.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
 tests:  0|5
total_score: 0/70
5f34a09
Fri 05 May 2023 01:01:02 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:25: error: ‘nuevoMov’ may be used uninitialized [-Werror=maybe-uninitialized]
   65 |           n->sudo[h][z] = nuevoMov;
      |           ~~~~~~~~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
279764a
Fri 05 May 2023 01:01:55 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
9721fe7
